--- a/app/tailwind_styles.css
+++ b/app/tailwind_styles.css
@@ -1,9 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-/*@layer components {*/
-/*    .filter-bar-padding {*/
-/*        padding-left: calc(100vw / 8);*/
-/*        padding-right: calc(100vw / 8);*/
-/*    }*/
-/*}*/
+@theme {
+    --breakpoint-3xs: 16rem;
+}
