--- a/app/tailwind_styles.css
+++ b/app/tailwind_styles.css
@@ -2,5 +2,8 @@
 @import "tw-animate-css";
 
 @theme {
-    --breakpoint-3xs: 16rem;
+    --breakpoint-3xs: 16rem; /* 256px */
+    --breakpoint-2xs: 18rem; /* 288px */
+    --breakpoint-xs: 20rem;  /* 320px */
+    --breakpoint-osm1: 28rem; /* 448px - "our small, 1" */
 }
